--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -20,14 +20,17 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # Build job
-  build:
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
       - name: Create static build directory
         run: mkdir -p _site
       - name: Copy static content to build directory
@@ -37,14 +40,9 @@ jobs:
           # Copy static assets
           mkdir -p _site/static
           cp -r glitchwebapp/static/* _site/static/ || echo "No static files to copy"
-          # Create index.html in the root if it doesn't exist
+          # Ensure we have an index.html
           if [ ! -f _site/index.html ]; then
-            # If index.html doesn't exist in templates, use the base index.html
-            if [ -f _site/base.html ]; then
-              cp _site/base.html _site/index.html
-            else
-              echo "<meta http-equiv='refresh' content='0; url=index.html'>" > _site/index.html
-            fi
+            cp -f index.html _site/index.html
           fi
           # Replace Django template tags with static content
           find _site -type f -name "*.html" -exec sed -i 's/{% extends.*%}//g' {} \;
@@ -54,16 +52,9 @@ jobs:
           find _site -type f -name "*.html" -exec sed -i 's/{% static \(.*\) %}/static\/\1/g' {} \;
           find _site -type f -name "*.html" -exec sed -i 's/{% url \(.*\) %}/\1.html/g' {} \;
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '_site'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
